Modularity and Java 11 update

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /BasicDataStructures/src/*.class
 /TalLogic/src/*.class
 /TalInterface/src/*.class
+/JavaFXModules/build/
+/JavaFXModules/nbproject/private/
